--- a/css/style-about.css
+++ b/css/style-about.css
@@ -5,9 +5,12 @@
 }
 
 body {
-    background-color: #87ceeb;
     font-family: Arial, Helvetica, sans-serif;
+    height: 100vh;
     background-image: url("../images/Solar-copy.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 
@@ -18,7 +21,7 @@ header {
 	color: white;
 	flex-direction: row;
 	justify-content: space-between;
-    margin-bottom: 50px;
+    margin-bottom: 0;
     background-color: #777777;
     border: 0;
 }
@@ -75,9 +78,9 @@ h1 {
     color: #00ff00;
 }
 
-main {
-    background-color: rgb(0, 0, 250, 0.2);
-    padding: 20px;
+.main {
+    width: 100%;
+    height: 100%;
 }
 
 .clicked {
@@ -88,7 +91,7 @@ main {
 }
 
 p {
-    font-size: 2.5em;
+    font-size: 150%;
     color: #ffffff;
 }
 
