--- a/css/style-team.css
+++ b/css/style-team.css
@@ -60,13 +60,6 @@ header > nav > div:hover
     background-color: darkgray;
 }
 
-h2
-{
-	font-weight: bolder;
-    font-size: 20px;
-    margin-top: 30px;
-}
-
 h1 {
     vertical-align: middle;
     margin-top: 25px;
@@ -77,10 +70,21 @@ h1 {
     color: #00ff00;
 }
 
+h2
+{
+	font-weight: bolder;
+    font-size: 20px;
+    margin-top: 30px;
+}
+
+h4 {
+    color: #ffffff;
+    text-align: center;
+}
+
 .main {
-    width: 95%;
+    width: 100%;
     height: 100%;
-    margin: auto;
 }
 
 .clicked {
@@ -90,27 +94,54 @@ h1 {
     border-bottom: 4px solid #00ff00;
 }
 
-p {
-    font-size: 18px;
-    color: #ffffff;
-    text-align: justify;
-}
-
-footer {
-    display: absolute;
-    bottom: 5px;
-}
-
 footer p {
+    display: relative;
     clear: both;
     text-align: right;
+    margin-top: -5px;
     border-left: 70px;
-    margin-bottom: -10px;
     font-size: 14px;
     color: #ffffff;
-    vertical-align:  bottom;
-    bottom: auto;
 }
+
+table {
+    margin: auto;
+    border: 1px solid #00ff00;
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 1px;
+    white-space: nowrap;
+}
+
+tr:nth-child(even){
+    background-color: #f2f2f2;
+    color: #000000;
+}
+
+tr:nth-child(odd) {
+    background-color: #000000;
+    color: #f2f2f2;
+}
+
+tr:nth-child(odd):hover {
+    background-color: #777;
+}
+
+tr:nth-child(even):hover {
+    background-color: #777;
+}
+
+th {
+    padding-top: 2px;
+    padding-bottom: 2px;
+    text-align: left;
+    background-color: #4CAF50;
+    color: white;
+}
+
 
 
 
