--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 * {
+    width: 100%;
     margin: 0;
     padding: 0;
 }
@@ -8,51 +9,60 @@ body {
     background-image: url("../images/Solar-copy.png");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center center;
-    
+    background-position: center;
+    height: auto;    
 }
 
+.container-fluid {
+    padding: 0;
+}
 
-header {
-    margin-top: 0;
-	width: 100%;
+#head {
+    background-color: #777777;
+    text-align: center;
+}
+
+.header, .navbar {
+    margin: auto;
+    width: 100% !Important;
 	display: flex;
 	color: white;
 	flex-direction: row;
-	justify-content: space-between;
-    margin-bottom: 150px;
+    justify-content: space-between;
     background-color: #777777;
     border: 0;
+    padding: 0;
 }
 
-header > nav
-{
+.header a {
+    color: #ffffff !Important;
+    padding-top: 15px;
+}
+
+#navbarSupportedContent {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	margin-right: 60px;    
 }
 
-header > nav > div
-{
+.header > div {
 	display: block;
-	padding: 0 20px;
+	padding: 20px;
 	cursor: pointer;
     transition: 0.4s ease-out;
     align-content: center;
-    height: 95%;
-    line-height: 95%;
+    height: 100%;
+    line-height: 100%;
     text-align: center;
 }
 
-span {
-    display: inline-block;
+#navbarSupportedContent {
+    padding: 0;
     vertical-align: middle;
-    line-height: normal;
 }
 
-header > nav > div:hover
-{
+.nav-item:hover {
     transform: scale(1.05);
     display: block;
 	text-decoration-color: rgb(200, 200, 200);
@@ -60,11 +70,26 @@ header > nav > div:hover
     background-color: darkgray;
 }
 
+.nav-link {
+	font-weight: bolder;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 12px;
+}
+
 h2
 {
 	font-weight: bolder;
     font-size: 20px;
     margin-top: 30px;
+}
+
+#brand {
+    vertical-align: middle;
+    margin-left: 150px;
+    font-weight:  bolder;
+    font-size: 30px;
+    color: #00ff00 !Important;
 }
 
 h1 {
@@ -78,16 +103,22 @@ h1 {
 }
 
 h3 {
-    font-size: 1.5em;
+    font-size: 2.0em;
     color: #ffffff;
+     margin-top: 150px;
 }
 
-#data-input {
-    margin-left: 100px;
-    width: 45%;
-    display: absolute;
-    float: left;
-    height: 370px;
+.row {
+    margin:0;
+    border:0;
+    padding: 0;
+}
+
+#space {
+    display: block;
+    min-height: 100px;
+    background-color: #ffffff;
+    visibility: hidden;
 }
 
 table {
@@ -99,9 +130,10 @@ table {
 thead {
     color: #ffffff;
     font-size: 20px;
+    text-align: center;
 }
 
-.clicked {
+.active {
     display: block;
     color: rgb(200, 200, 200);
     background-color: darkgray;
@@ -109,7 +141,7 @@ thead {
 }
 
 .select {
-    font-size: 16px;
+    font-size: 1em;
     border-radius: 15px;
     color: #141313;
     padding:5px;
@@ -129,12 +161,12 @@ thead {
     border-radius: 15px;
     color: #141313;
     text-align: center;
-    width: 65px;
+    width: 70px;
     padding: 5px;
 }
 
 #add {
-    width: 380px;
+    width: 76%;
     font-size: 18px;
     border-radius: 15px;
     background-color: #00ff00;
@@ -144,7 +176,7 @@ thead {
 }
 
 #total {
-    width: 365px;
+    width: 80%;
     font-size: 18px;
     border-radius: 15px;
     background-color: #ffffff;
@@ -153,41 +185,34 @@ thead {
 }
 
 #reset {
-    display: inline;
+    width: 13%;
     background: rgba(4, 4, 4, 0.2);
     cursor: pointer;
 }
 
-#data-submission {
-    width: 40%;
-    display: relative;
-    float: right;
-    margin-top: 50px;
-}
-
-h3 {
-    font-size: 30px;
-}
-
 p {
-    font-size: 18px;
+    font-size: 1.1em;
     color: #ffffff;
 }
 
+#output-wrapper {
+    text-align: center;
+}
+
 #output {
-    display: block;
-    clear: both;
-    width: 500px;
-    height: 30px;
-    font-size: 18px;
+    display: inline-flex;
+    text-align: center;
+    background-color: #ffffff;
+    width: auto;
+    font-size: 1.2em;
     color: #000000;
     background-color: #ffffff;
-    border-radius: 5px;
-    margin-top:500px;
-    margin-right: auto;
-    margin-left: auto;
-    text-align: center;
-    padding-top: 10px;
+    height: 2em;
+    margin-top: 3em;
+    padding-top: 0.3em;
+    padding-left: 2em;
+    padding-right: 2em;
+    border-radius: 0.5em;
     visibility: hidden;
 }
 
@@ -195,8 +220,8 @@ footer p {
     display: relative;
     clear: both;
     text-align: right;
-    margin-top: 15px;
     border-right: 70px;
-    font-size: 14px;
+    font-size: 1em;
     color: #ffffff;
+    margin-top: 3em;
 }
